2010-09-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/defaults.spad.pamphlet,
	src/algebra/sets.spad.pamphlet,
	src/algebra/array1.spad.pamphlet: Improve sort and set
	operations.

2010-09-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet,
	src/algebra/expr.spad.pamphlet: Add Weierstrass elliptic
	functions.

2010-09-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intaf.spad.pamphlet: Integration improvement.

2010-09-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: Add '$tryRecompileArguments' flag.
	src/algebra/mantepse.spad.pamphlet: Use it, adjust.

2010-09-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intef.spad.pamphlet: Split integrals involving
	multiple square roots (fixes SF 2928663).

2010-09-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/trigcat.spad.pamphlet,
	src/algebra/expr.spad.pamphlet: Add polylog.

2010-09-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/manip.spad.pamphlet: Replace strings by
	symbols.

2010-07-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nrunfast.boot, src/interp/nruncomp.boot,
	src/interp/nrunopt.boot, src/interp/category.boot,
	src/interp/wi2.boot, src/interp/nrungo.boot,
	src/interp/Makefile.in, src/interp/primitives.lisp,
	src/interp/interop.boot, src/interp/simpbool.boot,
	src/interp/setq.lisp, src/interp/macros.lisp,
	src/interp/define.boot, src/interp/spad.lisp: Misc
	cleanups, merge ggreater.lisp into macros.lisp.
	ggreater.lisp : remove.

2010-07-20  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/exposed.lsp.pamphlet,
	src/algebra/ideal.spad.pamphlet,src/algebra/idecomp.spad.pamphlet,
	src/algebra/qalgset.spad.pamphlet, src/hyper/pages/ug08.ht,
	src/share/algebra/command.list, src/share/algebra/topics.data: