@@ -1,3 +1,8 @@
+2010-09-22  Aleksej Saushev <asau@inbox.ru>
+
+	* src/scripts/mkdist.sh: Simplify removal of ".svn"
+	subdirectories.
+
 2010-09-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/defaults.spad.pamphlet,
